--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div id="HeaderTop">
+            <div id="logo">
+                <img src="./public/assets/img/logo-img.png" alt="logo" width=160px height=139px >
+            </div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About us</li>
+                    <li>Services</li>
+                    <li>Picing</li>
+                    <li>Team</li>
+                    <li><button>Contact Us</button></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
