add of header bottom

--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
                 </ul>
             </nav>
         </div>
+
+        <div id="HeaderBottom">
+            <div class="left">
+                <div id="TitleOfHeader">
+                    <h1>24/7 CyberSecurity <br> Operation Center</h1>
+                    <p>Dolor sit amet consectetur adipisicing elit sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua.</p>
+                    <div id="HeaderButton">
+                        <button>Get started</button>
+                        <button id="contactDarkBlue">Contact Us</button>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="right">
+                <img src="./public/assets/img/banner-right-img.png" alt="banner-right" >
+            </div>
+        </div>
     </header>
 </body>
 </html>
