responsive of header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             
             <div class="right">
-                <img src="./public/assets/img/banner-right-img.png" alt="banner-right" >
+                <img src="./public/assets/img/banner-right-img.png" alt="banner-right" width="612">
             </div>
         </div>
     </header>
