--- a/index.html
+++ b/index.html
@@ -41,5 +41,34 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section id="PARTNERS">
+            <div id="PartnersTop">
+                <p>P A R T N E R S</p>
+                <h1>We're Working With</h1>
+            </div>
+            <div id="PartnersBottom">
+                <div class="sliders" id="cyberSecurity">
+                    <img src="./public/assets/img/slider-item-img1.png" alt="slider1">
+                </div>
+                <div class="sliders" id="cardProtocol">
+                    <img src="./public/assets/img/slider-item-img2.png" alt="slider2">
+                </div>
+                <div class="sliders" id="crypto">
+                    <img src="./public/assets/img/slider-item-img3.png" alt="slider3">
+                </div>
+                <div class="sliders" id="mall">
+                    <img src="./public/assets/img/slider-item-img4.png" alt="slider4">
+                </div>
+                <div class="sliders" id="retinaScan">
+                    <img src="./public/assets/img/slider-item-img5.png" alt="slider5">
+                </div>
+                <div class="sliders" id="virtualEBank">
+                    <img src="./public/assets/img/slider-item-img6.png" alt="slider6">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
