update of partners section in index

--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
                 <h1>We're Working With</h1>
             </div>
             <div id="PartnersBottom">
-                <div class="sliders" id="cyberSecurity">
+                <div class="sliders">
                     <img src="./public/assets/img/slider-item-img1.png" alt="slider1">
                 </div>
-                <div class="sliders" id="cardProtocol">
+                <div class="sliders">
                     <img src="./public/assets/img/slider-item-img2.png" alt="slider2">
                 </div>
-                <div class="sliders" id="crypto">
+                <div class="sliders">
                     <img src="./public/assets/img/slider-item-img3.png" alt="slider3">
                 </div>
-                <div class="sliders" id="mall">
+                <div class="sliders">
                     <img src="./public/assets/img/slider-item-img4.png" alt="slider4">
                 </div>
-                <div class="sliders" id="retinaScan">
+                <div class="sliders">
                     <img src="./public/assets/img/slider-item-img5.png" alt="slider5">
                 </div>
-                <div class="sliders" id="virtualEBank">
+                <div class="sliders">
                     <img src="./public/assets/img/slider-item-img6.png" alt="slider6">
                 </div>
             </div>
