Add image for list, add of who are we section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,23 @@
                 </div>
             </div>
         </section>
+
+        <section id="WhoWeAre">
+            <div id="WhoLeft">
+                <img src="./public/assets/img/informationmain-left-sec-img.png" alt="">
+            </div>
+            <div id="WhoRight">
+                <p id="WhoSubTitle">W H O &ensp; W E &ensp;A R E</p>
+                <h1>Reduce Risk of Your <br>Workflow Be Productive</h1>
+                <p class="WhoTextContent">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum <br>dolore eu fugiat nulla pariatur excepteur sint occaecat cupidatat <br> non proident, sunt in culpa qui officia deserunt mollit anim id est <br>laborum incidunt ut labore et dolore magnam.</p>
+                <ul>
+                    <li><p class="WhoTextContent">Aute irure dolor in reprehenderit in voluptate velit esse mollitia.</p></li>
+                    <li><p class="WhoTextContent">dolore eu fugiat nulla pariatur excepteur sint occaecat distincto.</p></li>
+                    <li><p class="WhoTextContent">Non proident, sunt in culpa qui officia deserunt mollit assumea.</p></li>
+                    <li><p class="WhoTextContent">Laborum incidunt ut labore et dolore magnam rugiat occaecai.</p></li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 </html>
