--- a/index.html
+++ b/index.html
@@ -86,6 +86,37 @@
                 </ul>
             </div>
         </section>
+
+        <section id="WhatWeDo">
+            <div id="WhatWeDoTitle">
+                <p >W H A T &ensp; W E &ensp; D O</p>
+                <h1>Complete And Effective Protection For</h1>
+                <h1>Your Home And Office</h1>
+            </div>
+            <div id="Card">
+                <div>
+                    <img src="./public/assets/img/Effective-sec-item-img1.png" alt="Effective1">
+                    <h5>Camera <br> Surveillance</h5>
+                    <p>Dolor in reprehenderit <br> aolore eu fugiat nulla <br> non proident sunt in <br> laborum incidun.</p>
+                </div>
+                <div>
+                    <img src="./public/assets/img/Effective-sec-item-img2.png" alt="Effective2">
+                    <h5>Folder <br> Security</h5>
+                    <p>Dolor in reprehenderit <br> aolore eu fugiat nulla <br> non proident sunt in <br> laborum incidun.</p>
+                </div>
+                <div>
+                    <img src="./public/assets/img/Effective-sec-item-img3.png" alt="Effective3">
+                    <h5>End to End <br> Encryption</h5>
+                    <p>Dolor in reprehenderit <br> aolore eu fugiat nulla <br> non proident sunt in <br> laborum incidun.</p>
+                </div>
+                <div>
+                    <img src="./public/assets/img/Effective-sec-item-img4.png" alt="Effective4">
+                    <h5>Finger Print <br>Security</h5>
+                    <p>Dolor in reprehenderit <br> aolore eu fugiat nulla <br> non proident sunt in <br> laborum incidun.</p>
+                </div>
+            </div>
+            <button>Get Started</button>
+        </section>
     </main>
 </body>
 </html>
