Section 6 left and add of stylebis.css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="./public/css/stylebis.css">
 </head>
+
+
 <body>
+
+<section id="section6">
+
+<div id="section6-left-emplacement">
+
+    <div id="img-dots-div">
+        <img id="img-dots" src="./public/assets/img/dots-img.png" alt="">
+    </div>
+
+
+    <div id="section6-left">
+    
+        <p id="reliable">RELIABLE IT & CYBER SECURITY</p>
+
+        <h1 id="cyber">Cyber Security Services<br>With Top IT Experts</h1>
+
+        <p id="tempore">Tempore, aute irure dolor in reprehenderit in voluptate velit esse<br>
+            dolore en fugiat nulla pariatur excepteur sint occaecat cupidatat<br>
+            non proident, sunt in culpa aui officia <br><br> Soluta
+            nobis est eligendi optio cumque nihil impedit quo
+            minus id <br> ruod maxime placeat facere possimus.</p>  
+
+
+            <div id="cercle">
+                <div class="progress-circle" data-percent="85"><span>85%</span></div>
+                <div class="progress-circle" data-percent="78"><span>78%</span></div>
+                <div class="progress-circle" data-percent="64"><span>64%</span></div>  
+            </div>
+
+            <div id="title-circle">
+                <h3>Quality Services</h3>
+                <h3>Skilled Staff</h3>
+                <h3>Support Team</h3>
+            </div>
+    </div>
+</div>
+
+
+</section>
+
+
+
+
     
 </body>
+
+
+
 </html>
