--- a/index.html
+++ b/index.html
@@ -45,6 +45,28 @@
                 <h3>Support Team</h3>
             </div>
     </div>
+
+</div>
+
+<div id="section6-right">
+    <img src="./public/assets/img/service-right-bg-img.png" alt="" width="958px">
+
+
+    <div id="creative">
+        <div id="creative-flex-div">
+            <div id="creative-flex">
+                <img src="./public/assets/img/service-box-img.png" alt="" width="85px">
+                <p><strong>Creative Security Solutions</strong></p>
+                <p>Quos dolores et quas molestias excepturi sint<br>occaecati cuiditate non provident.</p>
+
+                <p>Read more ></p>
+            </div>
+        </div>
+
+        
+    </div>
+
+    
 </div>
 
 
