--- a/index.html
+++ b/index.html
@@ -138,6 +138,20 @@
 
     </div>
 
+    <div id="section7-right">
+        <div id="back-right-bis">
+            <p id="reliable">STATISTICS</p>
+            <h1 id="cyber-bis">Our Large Acheivements<br>in Cyber Security</h1>
+            <p id="tempore-bis">Repudiandae irure dolor in reprehenderit in voluptate velit esse<br>
+            dolore eu fugiat nulla pariatur excepteur sint occaecat cupidatat<br>
+            non proident, sunt in culpa qui officia deserunt mollit anim id est<br>
+            laborum incidunt ut labore et dolore magnam</p>
+            <button>Get started</button>
+        </div>
+</div>
+
+
+
 
 </section>
 
