--- a/index.html
+++ b/index.html
@@ -149,12 +149,20 @@
             <button>Get started</button>
         </div>
 </div>
+</section>
+
+
+<section id="section8">
+
+    <div id="title">
+        <p id="reliable">OUR NEWS</p>
+        <h1 id="cyber">Latest Blog Post</h1>
+    </div>
 
 
 
 
 </section>
-
 
 
 
