Section 8 - Blog left

--- a/index.html
+++ b/index.html
@@ -160,6 +160,30 @@
     </div>
 
 
+    <div id="img-blog">
+        <div id="img-blog1">
+            <div id="img-blog1-flex">
+                <img id="img-blog-1" src="./public/assets/img/blog-post-img1.png" alt="">
+                    <div id="div-trend-all">
+                        <div>
+                            <p id="trend">Trend In Design</p>
+                            <h1 id="protect">Portect Your Workplace From<br>Cyber Attacks</h1>
+                            <p id="read">Read more ></p>
+                        </div>
+
+                    </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+        
+    </div>
+
 
 
 </section>
