Section 8 - Blog Right

--- a/index.html
+++ b/index.html
@@ -175,12 +175,17 @@
             </div>
         </div>
 
+        <div id="img-blog2">
+            <img src="./public/assets/img/blog-post-img2.png" alt="">
+            <div id="div-trend-all-bis">
+                <div>
+                    <p id="trend">Management</p>
+                    <h1 id="protect">Security In A Fragment World Of<br>Workload For Your Business</h1>
+                    <p id="read">Read more ></p>
+                </div>
 
-
-
-
-
-
+            </div>
+        </div>
         
     </div>
 
