Section 8 - Background img left

--- a/index.html
+++ b/index.html
@@ -186,7 +186,11 @@
 
             </div>
         </div>
-        
+
+    </div>
+
+    <div id="img-dots-div-bis">
+        <img id="img-dots-bis" src="./public/assets/img/dots-img.png" alt="">
     </div>
 
 
