Section 9 - form with css style

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         </div><br>
         
         <div id="">
-            <textarea name="" placeholder="Message" id="form-Name-bis" cols="none" rows="10"></textarea>
+            <input name="" placeholder="Message" id="form-Name-bis"></input>
         </div>
         
         </form>
