Section 10 - Copyright for  the footer

--- a/index.html
+++ b/index.html
@@ -233,6 +233,14 @@
 
 <footer id="background-footer">
 
+    <div id="footer-start"></div>
+
+    <div id="border-foot"></div>
+
+    <div id="footer-end">
+        <p id="footer-end-p">Copyright MolenStars © 2022. All Rights Reserved.</p>
+    </div>
+
 </footer>
 
 
