Correction of the footer

--- a/index.html
+++ b/index.html
@@ -373,7 +373,9 @@
     </div>
 
 
-    <div id="border-foot"></div>
+    <div>
+        <div id="border-foot"></div>
+    </div>
 
     <div id="footer-end">
         <p id="footer-end-p">Copyright MolenStars © 2022. All Rights Reserved.</p>
