Correction of the form for responsive

--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@
                         </div><br>
                         
                         <div id="message">
-                            <input name="" placeholder="Message" id="form-Name-bis"></input>
+                            <!-- <input name="" placeholder="Message" id="form-Name-bis"></input> -->
+                            <textarea name="text" placeholder="Message" id="form-Name-bis"></textarea>
                         </div>
                         <button>Submit</button>
                     </form>    
