Correction of the blog for responsive

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             </div>
         </div>
 
-        <div id="newsletter-footer">
+        <!-- <div id="newsletter-footer">
             <h1 id="footer-h1">Newsletter</h1>
             <div id="newsletter-form">
                 <input type="email" placeholder="Enter your email" id="email-checkbox-footer">
@@ -369,18 +369,18 @@
                     <label for="checkbox" id="footer-p">I Agree to the Terms</label>
                 </div>    
             </div>
-        </div>
+        </div> -->
 
     </div>
 
 
-    <div>
+    <!-- <div>
         <div id="border-foot"></div>
     </div>
 
     <div id="footer-end">
         <p id="footer-end-p">Copyright MolenStars © 2022. All Rights Reserved.</p>
-    </div>
+    </div> -->
 
 </footer>
 
